Fixed bug in gridster layout
Where gridster somehow didnt recognize positions of
editors when first loaded and allowed them to overlap.
(fixed by copying some .css from http://jsfiddle.net/singram/PdjLE/)

--- a/app/assets/stylesheets/apps/editors.css.scss
+++ b/app/assets/stylesheets/apps/editors.css.scss
@@ -3,7 +3,8 @@
   /* width: 400px; */
   margin: 0px 16px 32px;
   /* min-height: 400px; */
-  background: #f00;
+  background: #111;
+
   display: inline-block;
     .pry-editor {
       /* margin: 5px; */
@@ -16,5 +17,60 @@
         }
 
 #editors {
-  background: #333
+   background: #eee
   }
+
+
+/* stuff i dumped from http://jsfiddle.net/singram/PdjLE/ that seems to fix */
+/* bugs related to   items overlapping one another at initial startup until 'touched' (moved */
+#editors-region > * {
+    margin: 0 auto;
+    -webkit-transition: height .4s;
+    -moz-transition: height .4s;
+    -o-transition: height .4s;
+    -ms-transition: height .4s;
+    transition: height .4s;
+}
+
+#editors-region .gs_w{
+    z-index: 2;
+    position: absolute;
+}
+
+.ready .gs_w:not(.preview-holder) {
+    -webkit-transition: opacity .3s, left .3s, top .3s;
+    -moz-transition: opacity .3s, left .3s, top .3s;
+    -o-transition: opacity .3s, left .3s, top .3s;
+    transition: opacity .3s, left .3s, top .3s;
+}
+
+.ready .gs_w:not(.preview-holder) {
+    -webkit-transition: opacity .3s, left .3s, top .3s, width .3s, height .3s;
+    -moz-transition: opacity .3s, left .3s, top .3s, width .3s, height .3s;
+    -o-transition: opacity .3s, left .3s, top .3s, width .3s, height .3s;
+    transition: opacity .3s, left .3s, top .3s, width .3s, height .3s;
+}
+
+#editors-region .preview-holder {
+    z-index: 1;
+    position: absolute;
+    background-color: #fff;
+    border-color: #fff;
+    opacity: 0.3;
+}
+
+#editors-region .player-revert {
+    z-index: 10!important;
+    -webkit-transition: left .3s, top .3s!important;
+    -moz-transition: left .3s, top .3s!important;
+    -o-transition: left .3s, top .3s!important;
+    transition:  left .3s, top .3s!important;
+}
+
+#editors-region .dragging {
+    z-index: 10!important;
+    -webkit-transition: all 0s !important;
+    -moz-transition: all 0s !important;
+    -o-transition: all 0s !important;
+    transition: all 0s !important;
+}
